Display thumbs on index.html

--- a/assignments.html
+++ b/assignments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>ART321 - Assignments</title>
+		<title>ART321 - ASSIGNMENTS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,13 +14,15 @@
 					<!-- Header -->
 						<section id="banner">
 							<div class="inner">
-								<h1>Frédéric François Chopin</h1>
-								<p>March 1, 1810 - October 17, 1849</p>
+								<h1>Assignment Page</h1>
+								<p>Raymond Duong - 1015127</p>
 								<ul class="actions">
-									<li><a href="index.html" class="button alt scrolly big">Home</a></li>
+									<!-- <li><a href="index.html" class="button alt scrolly big">Home</a></li> -->
+									<li><a href="#gallery" class="button alt scrolly big">Continue</a></li>
 								</ul>
 							</div>
 						</section>
+						<section id="gallery">
 									<!-- Filters -->
 										<header>
 											<h1>Assignments</h1>
@@ -30,12 +32,12 @@
 										<div class="content">
 											<div class="media all people">
 												<a href="index.html">Assignment 1</a><br>
-												<img src="images/thumbs/01.jpg" alt="" title="A maker of fine vodka has borrowed Chopin's name as a universal mark of quality"/>
+												<img src="images/thumbs/chopin.jpg" alt="" title="A maker of fine vodka has borrowed Chopin's name as a universal mark of quality"/>
 											</div>
 
 											<div class="media all place">
-												<a href="index.html">Assignment 2</a><br>
-												<img src="images/thumbs/05.jpg" alt="" title="Chopin had much respect for Bach and pushed his students to practise Bach everyday"/>
+												<a href="">Assignment 2</a><br>
+												<img src="images/thumbs/Chopin2.jpg" alt="" title="Chopin had much respect for Bach and pushed his students to practise Bach everyday"/>
 											</div>
 									<!-- 		<div class="media all people">
 												<a href="index.html">Assignment 3</a>
@@ -55,27 +57,46 @@
 											<div class="media all people">
 												<a href="index.html">Assignment 8</a>
 											</div> -->
-											<!-- <div class="media all thing">
-												<img src="images/thumbs/09.jpg" alt="" title="Chopin's Piano Concerto No. 2 was written and published before his Piano Concerto No. 1"/>
+											<div class="media all thing">
+												<a href="">Assignment 3</a><br>
+												<img src="images/thumbs/chopin3.jpg" alt="" title="Chopin's Piano Concerto No. 2 was written and published before his Piano Concerto No. 1"/>
 											</div>
 											<div class="media all people">
-												<img src="images/thumbs/02.jpg" alt="" title="Chopin moved from Poland where he was born to France. Chopin never returned to his homeland after moving."/>
+												<a href="">Assignment 4</a><br>
+												<img src="images/thumbs/chopin4.jpg" alt="" title="Chopin moved from Poland where he was born to France. Chopin never returned to his homeland after moving."/>
 											</div>
 											<div class="media all place">
-												<img src="images/thumbs/06.jpg" alt="" title="Chopin was a very modest person - he was very embarassed to ask his students for payment so he looked away every time as they placed the fee down"/>
+												<div><br><br></div>
+											</div>
+											<div class="media all place">
+												<div><br><br></div>
+											</div>
+											<div class="media all place">
+												<div><br><br></div>												
+											</div>
+											<div class="media all place">
+												<div><br><br></div>												
+											</div>
+											<div class="media all place">
+												<a href="">Assignment 5</a><br>
+												<img src="images/thumbs/chopin5.jpg" alt="" title="Chopin was a very modest person - he was very embarassed to ask his students for payment so he looked away every time as they placed the fee down"/>
 											</div>
 											<div class="media all thing">
-												<img src="images/thumbs/10.jpg" alt="" title="Chopin's 'Minute Waltz' does not really last for one minute - it is longer than that."/>
+												<a href="">Assignment 6</a><br>
+												<img src="images/thumbs/chopin6.jpg" alt="" title="Chopin's 'Minute Waltz' does not really last for one minute - it is longer than that."/>
 											</div>
 											<div class="media all people">
-												<img src="images/thumbs/03.jpg" alt="" title="Chopin had an affair with a novelist"/>
+												<a href="">Assignment 7</a><br>
+												<img src="images/thumbs/chopin7.jpg" alt="" title="Chopin had an affair with a novelist"/>
 											</div>
 											<div class="media all place">
-												<img src="images/thumbs/07.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
-											</div> -->
+												<a href="">Assignment 8</a><br>
+												<img src="images/thumbs/chopin8.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
+											</div>
 											</section>
 								</div>
-
+							</section>
+						</section>
 					<!-- Contact -->
 						<section id="contact">
 							<!-- Social -->
@@ -88,7 +109,7 @@
 							<!-- Form -->
 								<div class="column">
 									<h3>Contact Me</h3>
-									<h4>You can contact me though the following:</h4>
+									<h4>You can contact me through the following:</h4>
 									<table>
 										<tr>
 											<td><b>Email:</b></td>
