--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>ART 321</title>
+		<title>ART 321 - ASSIGNMENT 1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,21 +32,31 @@
 							</header>
 
 							<div class="content">
-								<div class="media">
-									<!-- <a href="images/thumbs/chopin.jpg"> -->
-										
-										<img src="images/thumbs/chopin.jpg"/>
-									<!-- </a> -->
-								</div>
-								<div class="media">
-									<img src="images/thumbs/Chopin2.jpg"/>
-								</div>
-								<div class="media">
-									<img src="images/thumbs/chopin3.jpg"/>
-								</div>
-								<div class="media">
-									<img src="images/thumbs/chopin4.jpg"/>
-								</div>
+								<div class="media all people">
+												<img src="images/thumbs/chopin.jpg" alt="" title="A maker of fine vodka has borrowed Chopin's name as a universal mark of quality"/>
+											</div>
+
+											<div class="media all place">
+												<img src="images/thumbs/Chopin2.jpg" alt="" title="Chopin had much respect for Bach and pushed his students to practise Bach everyday"/>
+											</div>
+											<div class="media all thing">
+												<img src="images/thumbs/chopin3.jpg" alt="" title="Chopin's Piano Concerto No. 2 was written and published before his Piano Concerto No. 1"/>
+											</div>
+											<div class="media all people">
+												<img src="images/thumbs/chopin4.jpg" alt="" title="Chopin moved from Poland where he was born to France. Chopin never returned to his homeland after moving."/>
+											</div>
+											<div class="media all place">
+												<img src="images/thumbs/chopin5.jpg" alt="" title="Chopin was a very modest person - he was very embarassed to ask his students for payment so he looked away every time as they placed the fee down"/>
+											</div>
+											<div class="media all thing">
+												<img src="images/thumbs/chopin6.jpg" alt="" title="Chopin's 'Minute Waltz' does not really last for one minute - it is longer than that."/>
+											</div>
+											<div class="media all people">
+												<img src="images/thumbs/chopin7.jpg" alt="" title="Chopin had an affair with a novelist"/>
+											</div>
+											<div class="media all place">
+												<img src="images/thumbs/chopin8.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
+											</div>
 							</div>
 						</div>
 
@@ -60,7 +70,7 @@
 								<!-- Contact Column -->
 								<div class="column">
 									<h3>Contact Me</h3>
-									<h4>You can contact me though the following:</h4>
+									<h4>You can contact me through the following:</h4>
 									<table>
 										<tr>
 											<td><b>Email:</b></td>
