--- a/assignments.html
+++ b/assignments.html
@@ -36,7 +36,7 @@
 											</div>
 
 											<div class="media all place">
-												<a href="">Assignment 2</a><br>
+												<a href="a2/a2.html">Assignment 2</a><br>
 												<img src="images/thumbs/Chopin2.jpg" alt="" title="Chopin had much respect for Bach and pushed his students to practise Bach everyday"/>
 											</div>
 									<!-- 		<div class="media all people">
