--- a/assignments.html
+++ b/assignments.html
@@ -58,7 +58,7 @@
 												<a href="index.html">Assignment 8</a>
 											</div> -->
 											<div class="media all thing">
-												<a href="">Assignment 3</a><br>
+												<a href="a3/a3.html">Assignment 3</a><br>
 												<img src="images/thumbs/chopin3.jpg" alt="" title="Chopin's Piano Concerto No. 2 was written and published before his Piano Concerto No. 1"/>
 											</div>
 											<div class="media all people">
