Nyancat added to a3

--- a/a3/a3.html
+++ b/a3/a3.html
@@ -10,7 +10,7 @@
 		<div>
 			To download a whole package of the assignment as a zip, click here: <a href="a3.zip">assignment 3 package</a><br>
 			<img src="a3.gif"> <br>
-				This was created in photoshop making each layer as a frame playing at 0.1s/frame. PSD file is included within the zipped package above.
+				This was created in photoshop making each layer as a frame playing at 0.1s/frame. PSD file is included within the zipped package above. Nyan cat frame from: https://www.deviantart.com/nanioka/art/Nyan-Cat-Gif-Frames-334317795
 		</div>
 	<embed src="pong_theme.mp3" loop="true" autostart="true" hidden="false" />
 	</body>
