--- a/assignments.html
+++ b/assignments.html
@@ -58,11 +58,11 @@
 												<a href="index.html">Assignment 8</a>
 											</div> -->
 											<div class="media all thing">
-												<a href="a3/a3.html">Assignment 3</a><br>
+												<a href="a3_real/a3.html">Assignment 3</a><br>
 												<img src="images/thumbs/chopin3.jpg" alt="" title="Chopin's Piano Concerto No. 2 was written and published before his Piano Concerto No. 1"/>
 											</div>
 											<div class="media all people">
-												<a href="">Assignment 4</a><br>
+												<a href="a3/a3.html">Assignment 4</a><br>
 												<img src="images/thumbs/chopin4.jpg" alt="" title="Chopin moved from Poland where he was born to France. Chopin never returned to his homeland after moving."/>
 											</div>
 											<div class="media all place">
