--- a/assignments.html
+++ b/assignments.html
@@ -82,7 +82,7 @@
 												<img src="images/thumbs/chopin5.jpg" alt="" title="Chopin was a very modest person - he was very embarassed to ask his students for payment so he looked away every time as they placed the fee down"/>
 											</div>
 											<div class="media all thing">
-												<a href="">Assignment 6</a><br>
+												<a href="a6/a6.html">Assignment 6</a><br>
 												<img src="images/thumbs/chopin6.jpg" alt="" title="Chopin's 'Minute Waltz' does not really last for one minute - it is longer than that."/>
 											</div>
 											<div class="media all people">
