--- a/assignments.html
+++ b/assignments.html
@@ -78,7 +78,7 @@
 												<div><br><br></div>												
 											</div>
 											<div class="media all place">
-												<a href="">Assignment 5</a><br>
+												<a href="a5/a5.html">Assignment 5</a><br>
 												<img src="images/thumbs/chopin5.jpg" alt="" title="Chopin was a very modest person - he was very embarassed to ask his students for payment so he looked away every time as they placed the fee down"/>
 											</div>
 											<div class="media all thing">
