--- a/assignments.html
+++ b/assignments.html
@@ -86,7 +86,7 @@
 												<img src="images/thumbs/chopin6.jpg" alt="" title="Chopin's 'Minute Waltz' does not really last for one minute - it is longer than that."/>
 											</div>
 											<div class="media all people">
-												<a href="">Assignment 7</a><br>
+												<a href="a7/a7.html">Assignment 7</a><br>
 												<img src="images/thumbs/chopin7.jpg" alt="" title="Chopin had an affair with a novelist"/>
 											</div>
 											<div class="media all place">
