--- a/assignments.html
+++ b/assignments.html
@@ -90,7 +90,7 @@
 												<img src="images/thumbs/chopin7.jpg" alt="" title="Chopin had an affair with a novelist"/>
 											</div>
 											<div class="media all place">
-												<a href="">Assignment 8</a><br>
+												<a href="a8/a8.html">Assignment 8</a><br>
 												<img src="images/thumbs/chopin8.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
 											</div>
 											</section>
