--- a/proj/proj.html
+++ b/proj/proj.html
@@ -6,25 +6,115 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 
-<body>
-	<div class="videoContainer" onclick="nextVideo()">
-		
-		<video autoplay loop muted id="myVideo">
-		  <source src="vids/1.webm" type="video/webm">
-		</video>
+<body class="main">
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="laptop-wrapper">
+        <video id="myVideo" width="560" height="315" loop autoplay muted src="vids/3.webm"></video>
+      </div>
+    </div>
+  </div>
+</div>
+
+	<div class="content2">
+	  <!-- Use a button to pause/play the video with JavaScript -->
+	  <button id="myBtn2" onclick="nextVideo()"><img src="next.png"></img></button>
 	</div>
 
 	<div class="content">
-	 <!--  <h1>Heading</h1>
-	  <p>Lorem ipsum...</p> -->
 	  <!-- Use a button to pause/play the video with JavaScript -->
-	  <button id="myBtn" onclick="toggleMute()">Unmute</button>
+	  <button id="myBtn" onclick="toggleMute()"><img src="VOLUME.png"></img></button>
 	</div>
 </body>
 
-<script>
+<style>
 
-	var userToggled = false;
+div.laptop-wrapper {
+    position: relative;
+    padding-bottom: 66.5%;
+    height: 0;
+    background: url(tv.png) no-repeat;
+    background-size: contain;
+}
+
+div.laptop-wrapper video {
+    box-sizing: border-box;
+/*    background: url(tv.png) no-repeat;
+    background-size: contain;*/
+    padding: 12.7% 18.5%;
+    position: absolute;
+    top: -98;
+    left: -160;
+    width: 100%;
+    height: 100%;
+	-webkit-filter: grayscale(100%);
+   	-moz-filter: grayscale(100%);
+   	-ms-filter: grayscale(100%);
+   	-o-filter: grayscale(100%);
+   	filter: grayscale(100%);
+   	z-index: -100;
+}
+
+	.main {
+		background: url(1.jpg);
+	}
+
+
+	/* Add some content at the bottom of the video/page */
+	.content {
+	    position: fixed;
+	    top: 360;
+	    right: 82;
+	    padding: 20px;
+	}
+
+	.content2 {
+	    position: fixed;
+	    top: 110;
+	    right: 82;
+	    padding: 20px;
+	}
+
+	/* Style the button used to pause/play the video */
+	#myBtn {
+	    /*width: 200px;*/
+	    /*width: 100%;*/
+	    /*height: 100%;*/
+	    background-repeat: no-repeat;
+	    /*font-size: 18px;*/
+	    padding: 0px;
+	    border: none;
+	    background: none;
+	    /*color: #fff;*/
+	}
+
+	#myBtn:hover {
+	    background: none;
+	    color: black;
+	}
+
+		#myBtn2 {
+	    /*width: 200px;*/
+	    /*width: 100%;*/
+	    /*height: 100%;*/
+	    background-repeat: no-repeat;
+	    /*font-size: 18px;*/
+	    padding: 0px;
+	    border: none;
+	    background: none;
+	    /*color: #fff;*/
+	}
+
+	#myBtn2:hover {
+	    background: none;
+	    color: black;
+	}
+</style>
+
+
+<script>
 
 	function getRandomInt(max) {
 	  return Math.floor(Math.random() * Math.floor(max));
@@ -35,58 +125,20 @@
 	  video.muted = !video.muted;
 	}
 
-	var videoNumber = getRandomInt(5);
 	function nextVideo(){
-		var video = document.getElementById("myVideo").addEventListener('click', function() {
-			var videoNum = getRandomInt(5);
-    		document.getElementById('myVideo').src = "vids/"+videoNum+'.webm';
-    		if (video) video.muted = "false";
-    		console.log(videoNum);
-  		});
+		var video = document.getElementById("myVideo");
+		var videoNum = getRandomInt(5);
+    	document.getElementById('myVideo').src = "vids/"+videoNum+'.webm';
+    	//if (video) video.muted = "false";
+
+		// var video = document.getElementById("myVideo").addEventListener('click', function() {
+		// 	var videoNum = getRandomInt(5);
+  //   		document.getElementById('myVideo').src = "vids/"+videoNum+'.webm';
+  //   		if (video) video.muted = "false";
+  // 		});
 	}
 
 
 
 </script>
-
-<style>
-	#videoContainer {
-		cursor: url('A.jpg'), pointer;
-	}
-	#myVideo {
-	    position: fixed;
-	    right: 0;
-	    bottom: 0;
-	    min-width: 100%; 
-	    min-height: 100%;
-	    cursor: url('A.jpg'), pointer;
-	}
-	/* Add some content at the bottom of the video/page */
-	.content {
-	    position: fixed;
-	    bottom: 0;
-	    /*background: rgba(0, 0, 0, 0.5);*/
-	    color: #f1f1f1;
-	    width: 100%;
-	    padding: 20px;
-	}
-
-	/* Style the button used to pause/play the video */
-	#myBtn {
-	    width: 200px;
-	    font-size: 18px;
-	    padding: 10px;
-	    border: none;
-	    background: #000;
-	    color: #fff;
-	   	cursor: url('A.jpg'), auto;	
-
-	}
-
-	#myBtn:hover {
-	    background: #ddd;
-	    color: black;
-	}
-</style>
-
 </html>
