--- a/proj/proj.html
+++ b/proj/proj.html
@@ -58,36 +58,30 @@ div.laptop-wrapper video {
 }
 
 	.main {
-		background: url(1.jpg);
+		background: url(staticgif.gif);
 	}
 
 
 	/* Add some content at the bottom of the video/page */
 	.content {
-	    position: fixed;
+	    position: absolute;
 	    top: 360;
-	    right: 82;
-	    padding: 20px;
+	    right: 0;
+	    padding: 1.3% 5.1%;
 	}
 
 	.content2 {
-	    position: fixed;
-	    top: 110;
-	    right: 82;
-	    padding: 20px;
+	    position: absolute;
+	    top: 0;
+	    right: 0;
+	    padding: 7.7% 5.1%;
 	}
 
 	/* Style the button used to pause/play the video */
 	#myBtn {
-	    /*width: 200px;*/
-	    /*width: 100%;*/
-	    /*height: 100%;*/
 	    background-repeat: no-repeat;
-	    /*font-size: 18px;*/
-	    padding: 0px;
 	    border: none;
 	    background: none;
-	    /*color: #fff;*/
 	}
 
 	#myBtn:hover {
@@ -96,15 +90,9 @@ div.laptop-wrapper video {
 	}
 
 		#myBtn2 {
-	    /*width: 200px;*/
-	    /*width: 100%;*/
-	    /*height: 100%;*/
 	    background-repeat: no-repeat;
-	    /*font-size: 18px;*/
-	    padding: 0px;
 	    border: none;
 	    background: none;
-	    /*color: #fff;*/
 	}
 
 	#myBtn2:hover {
