final project finished added link in assign page

--- a/assignments.html
+++ b/assignments.html
@@ -93,6 +93,22 @@
 												<a href="a8/a8.html">Assignment 8</a><br>
 												<img src="images/thumbs/chopin8.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
 											</div>
+											<div class="media all place">
+												<div><br><br></div>
+											</div>
+											<div class="media all place">
+												<div><br><br></div>
+											</div>
+											<div class="media all place">
+												<div><br><br></div>												
+											</div>
+											<div class="media all place">
+												<div><br><br></div>												
+											</div>
+											<div class="media all place">
+												<a href="proj/proj.html">FINAL PROJECT</a><br>
+												<img src="proj/a.jpg" alt="" title="Most of Chopin's music was written for the piano"/>
+											</div>
 											</section>
 								</div>
 							</section>
