--- a/proj/proj.html
+++ b/proj/proj.html
@@ -6,8 +6,10 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 
+<audio autoplay loop>
+	<source src="tv-static-01.mp3">
+</audio>
 <body class="main">
-
 
 <div class="container">
   <div class="row">
